objects/TASKRAY__ViewProjectTasks__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the relationship between user and project for sidebar selection preferences.</description>
    <fields>
        <fullName>TASKRAY__AutoFollowTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoFollowTasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__IsFavorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favorite project for user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__PersonalProjectSortOrder__c</fullName>
        <label>Personal Project Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ProjectId__c</fullName>
        <label>ProjectId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipName>ViewProjectsTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__TasksOnOff__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TasksOnOff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>TaskRay View Project</label>
    <nameField>
        <label>ViewProjectTasks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay View Project</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>